codeworksio/codeworks/codeworks-commons/src/main/java/io/codeworks/commons/rql/parser/RqlParser.java
// Generated from Rql.g4 by ANTLR 4.2
package io.codeworks.commons.rql.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class RqlParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__32=1, T__31=2, T__30=3, T__29=4, T__28=5, T__27=6, T__26=7, T__25=8, 
		T__24=9, T__23=10, T__22=11, T__21=12, T__20=13, T__19=14, T__18=15, T__17=16, 
		T__16=17, T__15=18, T__14=19, T__13=20, T__12=21, T__11=22, T__10=23, 
		T__9=24, T__8=25, T__7=26, T__6=27, T__5=28, T__4=29, T__3=30, T__2=31, 
		T__1=32, T__0=33, IDENTIFIER=34, VALUE=35, SIGN=36, WS=37;
	public static final String[] tokenNames = {
		"<INVALID>", "'&'", "'in'", "','", "'or'", "'('", "'=gt='", "'<'", "'!='", 
		"'<='", "'ge'", "'page'", "'and'", "'sort'", "'asc'", "'eq'", "'lt'", 
		"'=le='", "'le'", "'limit'", "')'", "'=ge='", "'gt'", "'ne'", "'='", "'desc'", 
		"';'", "'&&'", "'||'", "'>'", "'=='", "'=lt='", "'>='", "'|'", "IDENTIFIER", 
		"VALUE", "SIGN", "WS"
	};
	public static final int
		RULE_query = 0, RULE_cond = 1, RULE_op = 2, RULE_eq = 3, RULE_ne = 4, 
		RULE_gt = 5, RULE_ge = 6, RULE_lt = 7, RULE_le = 8, RULE_in = 9, RULE_order = 10, 
		RULE_range = 11;
	public static final String[] ruleNames = {
		"query", "cond", "op", "eq", "ne", "gt", "ge", "lt", "le", "in", "order", 
		"range"
	};

	@Override
	public String getGrammarFileName() { return "Rql.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public RqlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class QueryContext extends ParserRuleContext {
		public OrderContext order() {
			return getRuleContext(OrderContext.class,0);
		}
		public RangeContext range() {
			return getRuleContext(RangeContext.class,0);
		}
		public CondContext cond() {
			return getRuleContext(CondContext.class,0);
		}
		public QueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_query; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RqlListener ) ((RqlListener)listener).enterQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RqlListener ) ((RqlListener)listener).exitQuery(this);
		}
	}

	public final QueryContext query() throws RecognitionException {
		QueryContext _localctx = new QueryContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_query);
		int _la;
		try {
			setState(39);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(24); cond(0);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(25); cond(0);
				setState(26);
				_la = _input.LA(1);
				if ( !(_la==3 || _la==26) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				setState(27); order();
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(29); cond(0);
				setState(30);
				_la = _input.LA(1);
				if ( !(_la==3 || _la==26) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				setState(31); range();
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(33); cond(0);
				setState(34);
				_la = _input.LA(1);
				if ( !(_la==3 || _la==26) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				setState(35); order();
				setState(36);
				_la = _input.LA(1);
				if ( !(_la==3 || _la==26) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				setState(37); range();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CondContext extends ParserRuleContext {
		public CondContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cond; }
	 
		public CondContext() { }
		public void copyFrom(CondContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class OrContext extends CondContext {
		public CondContext cond(int i) {
			return getRuleContext(CondContext.class,i);
		}
		public List<CondContext> cond() {
			return getRuleContexts(CondContext.class);
		}
		public OrContext(CondContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RqlListener ) ((RqlListener)listener).enterOr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RqlListener ) ((RqlListener)listener).exitOr(this);
		}
	}
	public static class CondOpContext extends CondContext {
		public OpContext op() {
			return getRuleContext(OpContext.class,0);
		}
		public CondOpContext(CondContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RqlListener ) ((RqlListener)listener).enterCondOp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RqlListener ) ((RqlListener)listener).exitCondOp(this);
		}
	}
	public static class GroupContext extends CondContext {
		public CondContext cond() {
			return getRuleContext(CondContext.class,0);
		}
		public GroupContext(CondContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RqlListener ) ((RqlListener)listener).enterGroup(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RqlListener ) ((RqlListener)listener).exitGroup(this);
		}
	}
	public static class AndContext extends CondContext {
		public CondContext cond(int i) {
			return getRuleContext(CondContext.class,i);
		}
		public List<CondContext> cond() {
			return getRuleContexts(CondContext.class);
		}
		public AndContext(CondContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RqlListener ) ((RqlListener)listener).enterAnd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RqlListener ) ((RqlListener)listener).exitAnd(this);
		}
	}

	public final CondContext cond() throws RecognitionException {
		return cond(0);
	}

	private CondContext cond(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		CondContext _localctx = new CondContext(_ctx, _parentState);
		CondContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_cond, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			switch (_input.LA(1)) {
			case 2:
			case 10:
			case 15:
			case 16:
			case 18:
			case 22:
			case 23:
			case IDENTIFIER:
				{
				_localctx = new CondOpContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(42); op();
				}
				break;
			case 5:
				{
				_localctx = new GroupContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(43); match(5);
				setState(44); cond(0);
				setState(45); match(20);
				}
				break;
			case 12:
				{
				_localctx = new AndContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(47); match(12);
				setState(48); match(5);
				setState(49); cond(0);
				setState(52); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(50); match(3);
					setState(51); cond(0);
					}
					}
					setState(54); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==3 );
				setState(56); match(20);
				}
				break;
			case 4:
				{
				_localctx = new OrContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(58); match(4);
				setState(59); match(5);
				setState(60); cond(0);
				setState(63); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(61); match(3);
					setState(62); cond(0);
					}
					}
					setState(65); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==3 );
				setState(67); match(20);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(79);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(77);
					switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
					case 1:
						{
						_localctx = new AndContext(new CondContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_cond);
						setState(71);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(72);
						_la = _input.LA(1);
						if ( !(_la==1 || _la==27) ) {
						_errHandler.recoverInline(this);
						}
						consume();
						setState(73); cond(4);
						}
						break;

					case 2:
						{
						_localctx = new OrContext(new CondContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_cond);
						setState(74);
						if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
						setState(75);
						_la = _input.LA(1);
						if ( !(_la==28 || _la==33) ) {
						_errHandler.recoverInline(this);
						}
						consume();
						setState(76); cond(2);
						}
						break;
					}
					} 
				}
				setState(81);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class OpContext extends ParserRuleContext {
		public LeContext le() {
			return getRuleContext(LeContext.class,0);
		}
		public NeContext ne() {
			return getRuleContext(NeContext.class,0);
		}
		public GtContext gt() {
			return getRuleContext(GtContext.class,0);
		}
		public InContext in() {
			return getRuleContext(InContext.class,0);
		}
		public GeContext ge() {
			return getRuleContext(GeContext.class,0);
		}
		public EqContext eq() {
			return getRuleContext(EqContext.class,0);
		}
		public LtContext lt() {
			return getRuleContext(LtContext.class,0);
		}
		public OpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_op; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RqlListener ) ((RqlListener)listener).enterOp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RqlListener ) ((RqlListener)listener).exitOp(this);
		}
	}

	public final OpContext op() throws RecognitionException {
		OpContext _localctx = new OpContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_op);
		try {
			setState(89);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(82); eq();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(83); ne();
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(84); gt();
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(85); ge();
				}
				break;

			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(86); lt();
				}
				break;

			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(87); le();
				}
				break;

			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(88); in();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EqContext extends ParserRuleContext {
		public TerminalNode VALUE() { return getToken(RqlParser.VALUE, 0); }
		public TerminalNode IDENTIFIER() { return getToken(RqlParser.IDENTIFIER, 0); }
		public EqContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_eq; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RqlListener ) ((RqlListener)listener).enterEq(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RqlListener ) ((RqlListener)listener).exitEq(this);
		}
	}

	public final EqContext eq() throws RecognitionException {
		EqContext _localctx = new EqContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_eq);
		try {
			setState(103);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(91); match(15);
				setState(92); match(5);
				setState(93); match(IDENTIFIER);
				setState(94); match(3);
				setState(95); match(VALUE);
				setState(96); match(20);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(97); match(IDENTIFIER);
				setState(98); match(30);
				setState(99); match(VALUE);
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(100); match(IDENTIFIER);
				setState(101); match(24);
				setState(102); match(VALUE);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NeContext extends ParserRuleContext {
		public TerminalNode VALUE() { return getToken(RqlParser.VALUE, 0); }
		public TerminalNode IDENTIFIER() { return getToken(RqlParser.IDENTIFIER, 0); }
		public NeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ne; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RqlListener ) ((RqlListener)listener).enterNe(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RqlListener ) ((RqlListener)listener).exitNe(this);
		}
	}

	public final NeContext ne() throws RecognitionException {
		NeContext _localctx = new NeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_ne);
		try {
			setState(114);
			switch (_input.LA(1)) {
			case 23:
				enterOuterAlt(_localctx, 1);
				{
				setState(105); match(23);
				setState(106); match(5);
				setState(107); match(IDENTIFIER);
				setState(108); match(3);
				setState(109); match(VALUE);
				setState(110); match(20);
				}
				break;
			case IDENTIFIER:
				enterOuterAlt(_localctx, 2);
				{
				setState(111); match(IDENTIFIER);
				setState(112); match(8);
				setState(113); match(VALUE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GtContext extends ParserRuleContext {
		public TerminalNode VALUE() { return getToken(RqlParser.VALUE, 0); }
		public TerminalNode IDENTIFIER() { return getToken(RqlParser.IDENTIFIER, 0); }
		public GtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_gt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RqlListener ) ((RqlListener)listener).enterGt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RqlListener ) ((RqlListener)listener).exitGt(this);
		}
	}

	public final GtContext gt() throws RecognitionException {
		GtContext _localctx = new GtContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_gt);
		try {
			setState(128);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(116); match(22);
				setState(117); match(5);
				setState(118); match(IDENTIFIER);
				setState(119); match(3);
				setState(120); match(VALUE);
				setState(121); match(20);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(122); match(IDENTIFIER);
				setState(123); match(6);
				setState(124); match(VALUE);
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(125); match(IDENTIFIER);
				setState(126); match(29);
				setState(127); match(VALUE);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GeContext extends ParserRuleContext {
		public TerminalNode VALUE() { return getToken(RqlParser.VALUE, 0); }
		public TerminalNode IDENTIFIER() { return getToken(RqlParser.IDENTIFIER, 0); }
		public GeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ge; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RqlListener ) ((RqlListener)listener).enterGe(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RqlListener ) ((RqlListener)listener).exitGe(this);
		}
	}

	public final GeContext ge() throws RecognitionException {
		GeContext _localctx = new GeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_ge);
		try {
			setState(142);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(130); match(10);
				setState(131); match(5);
				setState(132); match(IDENTIFIER);
				setState(133); match(3);
				setState(134); match(VALUE);
				setState(135); match(20);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(136); match(IDENTIFIER);
				setState(137); match(21);
				setState(138); match(VALUE);
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(139); match(IDENTIFIER);
				setState(140); match(32);
				setState(141); match(VALUE);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LtContext extends ParserRuleContext {
		public TerminalNode VALUE() { return getToken(RqlParser.VALUE, 0); }
		public TerminalNode IDENTIFIER() { return getToken(RqlParser.IDENTIFIER, 0); }
		public LtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RqlListener ) ((RqlListener)listener).enterLt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RqlListener ) ((RqlListener)listener).exitLt(this);
		}
	}

	public final LtContext lt() throws RecognitionException {
		LtContext _localctx = new LtContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_lt);
		try {
			setState(156);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(144); match(16);
				setState(145); match(5);
				setState(146); match(IDENTIFIER);
				setState(147); match(3);
				setState(148); match(VALUE);
				setState(149); match(20);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(150); match(IDENTIFIER);
				setState(151); match(31);
				setState(152); match(VALUE);
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(153); match(IDENTIFIER);
				setState(154); match(7);
				setState(155); match(VALUE);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LeContext extends ParserRuleContext {
		public TerminalNode VALUE() { return getToken(RqlParser.VALUE, 0); }
		public TerminalNode IDENTIFIER() { return getToken(RqlParser.IDENTIFIER, 0); }
		public LeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_le; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RqlListener ) ((RqlListener)listener).enterLe(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RqlListener ) ((RqlListener)listener).exitLe(this);
		}
	}

	public final LeContext le() throws RecognitionException {
		LeContext _localctx = new LeContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_le);
		try {
			setState(170);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(158); match(18);
				setState(159); match(5);
				setState(160); match(IDENTIFIER);
				setState(161); match(3);
				setState(162); match(VALUE);
				setState(163); match(20);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(164); match(IDENTIFIER);
				setState(165); match(17);
				setState(166); match(VALUE);
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(167); match(IDENTIFIER);
				setState(168); match(9);
				setState(169); match(VALUE);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InContext extends ParserRuleContext {
		public List<TerminalNode> VALUE() { return getTokens(RqlParser.VALUE); }
		public TerminalNode IDENTIFIER() { return getToken(RqlParser.IDENTIFIER, 0); }
		public TerminalNode VALUE(int i) {
			return getToken(RqlParser.VALUE, i);
		}
		public InContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_in; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RqlListener ) ((RqlListener)listener).enterIn(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RqlListener ) ((RqlListener)listener).exitIn(this);
		}
	}

	public final InContext in() throws RecognitionException {
		InContext _localctx = new InContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_in);
		int _la;
		try {
			int _alt;
			setState(202);
			switch ( getInterpreter().adaptivePredict(_input,16,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(172); match(2);
				setState(173); match(5);
				setState(174); match(IDENTIFIER);
				setState(175); match(3);
				setState(176); match(VALUE);
				setState(179); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(177); match(3);
					setState(178); match(VALUE);
					}
					}
					setState(181); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==3 );
				setState(183); match(20);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(184); match(IDENTIFIER);
				setState(185); match(30);
				setState(186); match(VALUE);
				setState(189); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(187); match(3);
						setState(188); match(VALUE);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(191); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
				} while ( _alt!=2 && _alt!=-1 );
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(193); match(IDENTIFIER);
				setState(194); match(24);
				setState(195); match(VALUE);
				setState(198); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,15,_ctx);
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(196); match(3);
						setState(197); match(VALUE);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(200); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,15,_ctx);
				} while ( _alt!=2 && _alt!=-1 );
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OrderContext extends ParserRuleContext {
		public List<TerminalNode> SIGN() { return getTokens(RqlParser.SIGN); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(RqlParser.IDENTIFIER, i);
		}
		public List<TerminalNode> IDENTIFIER() { return getTokens(RqlParser.IDENTIFIER); }
		public TerminalNode SIGN(int i) {
			return getToken(RqlParser.SIGN, i);
		}
		public OrderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_order; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RqlListener ) ((RqlListener)listener).enterOrder(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RqlListener ) ((RqlListener)listener).exitOrder(this);
		}
	}

	public final OrderContext order() throws RecognitionException {
		OrderContext _localctx = new OrderContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_order);
		int _la;
		try {
			int _alt;
			setState(266);
			switch ( getInterpreter().adaptivePredict(_input,29,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(204); match(13);
				setState(205); match(5);
				setState(207);
				_la = _input.LA(1);
				if (_la==SIGN) {
					{
					setState(206); match(SIGN);
					}
				}

				setState(209); match(IDENTIFIER);
				setState(217);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==3) {
					{
					{
					setState(210); match(3);
					setState(212);
					_la = _input.LA(1);
					if (_la==SIGN) {
						{
						setState(211); match(SIGN);
						}
					}

					setState(214); match(IDENTIFIER);
					}
					}
					setState(219);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(220); match(20);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(221); match(13);
				setState(222); match(5);
				setState(223); match(IDENTIFIER);
				setState(225);
				_la = _input.LA(1);
				if (_la==SIGN) {
					{
					setState(224); match(SIGN);
					}
				}

				setState(234);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==3) {
					{
					{
					setState(227); match(3);
					setState(228); match(IDENTIFIER);
					setState(230);
					_la = _input.LA(1);
					if (_la==SIGN) {
						{
						setState(229); match(SIGN);
						}
					}

					}
					}
					setState(236);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(237); match(20);
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(239);
				_la = _input.LA(1);
				if (_la==SIGN) {
					{
					setState(238); match(SIGN);
					}
				}

				setState(241); match(IDENTIFIER);
				setState(249);
